--- a/app/src/main/res/layout/activity_code_barre.xml
+++ b/app/src/main/res/layout/activity_code_barre.xml
@@ -27,14 +27,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txtTitleCodeBarre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Code Barres"
+    <com.journeyapps.barcodescanner.DecoratedBarcodeView
+        android:id="@+id/videoView"
+        android:layout_width="371dp"
+        android:layout_height="230dp"
+        android:layout_alignParentTop="true"
         app:layout_constraintBottom_toTopOf="@+id/imgCode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="0.0">
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
