--- a/app/src/main/res/layout/activity_code_barre.xml
+++ b/app/src/main/res/layout/activity_code_barre.xml
@@ -19,13 +19,15 @@
 
     <ImageView
         android:id="@+id/imgCode"
-        android:layout_width="122dp"
-        android:layout_height="119dp"
+        android:layout_width="369dp"
+        android:layout_height="183dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.559" />
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
         android:id="@+id/videoView"
