--- a/app/src/main/res/layout/barcode_activity.xml
+++ b/app/src/main/res/layout/barcode_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".codebarre.CodeBarreActivity">
+    tools:context=".barcode.BarcodeActivity">
 
     <TextView
         android:id="@+id/txtCodeDecode"
